--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,32 @@
+body{
+    margin: 0; 
+    padding: 0; 
+    background-color: #ffffff;
+}
+
+/* Global */
+.container{
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+ul{
+    margin: 0;
+    padding: 0
+}
+
+/* Header */
+header{
+    background: #3c0085;
+    color: #ffffff;
+}
+
+header a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
 header div#branding img{
     width: 3.0em;
     height: 3.0em;
@@ -6,4 +35,14 @@ header div#branding img{
  header div#branding{
     font-family: 'Luckiest Guy', cursive;
     font-size: 2em; 
+}
+
+header nav{
+    float: right;
+    
+}
+header nav ul li{
+    display: inline;
+    float: right;
+    padding: 0 5px;
 }
