--- a/css/index.css
+++ b/css/index.css
@@ -125,8 +125,8 @@ section#info div#pairing {
 
 section#info div#pairing h1, 
 section#info div#onboarding h1{
-    font-size: 4rem;
-    font-weight: 400;;
+    font-size: 3.5rem;
+    font-weight: 400;
 }
 
 section#info div#pairing p, 
@@ -150,7 +150,6 @@ section#info div#pairing {
 section#info .container {
    display:  flex block;
    flex-direction: row;
-   
 }
 
 section#info .box-1, section#info .box-2 {
@@ -162,4 +161,40 @@ section#info .box-1, section#info .box-2 {
     padding-right: 3.0%;
     background: #F0F2F4;
     border-radius: 5%;
+}
+
+/* Invision Ceo */ 
+section#invision-ceo .container {
+    display: flex; 
+    align-items: center;
+    
+}
+
+section#invision-ceo #ceo-image img{
+    border-radius: 50%;
+}
+
+section#invision-ceo .container quote {
+    font-size: 3.5rem;
+    font-weight: 400;
+    color: #3C0085;
+}
+
+section#invision-ceo .container p {
+    font-size: 1.15rem;
+    font-weight: none;
+    color: rgba(108, 102, 102, 0.837);
+}
+
+section#invision-ceo .container span {
+    font-size: 1.15rem;
+    font-weight: 900;
+    color: rgba(12, 11, 11, 0.81);
+}
+
+section#invision-ceo .container a {
+    color: blueviolet;
+    font-weight: 600;
+    font-size: 1.3rem;
+    text-decoration: none;
 }
