--- a/css/index.css
+++ b/css/index.css
@@ -80,8 +80,8 @@ section#addToSlack {
 }
 
 section#addToSlack h1 {
-    font-family: 'Mansalva', cursive;
-    font-size: 5em;
+    font-family: 'Comfortaa', cursive;
+    font-size: 4.3em;
     margin-left: .8em;
     color: #ffffff;
     width: 500px;
@@ -269,6 +269,7 @@ footer #box-3 i {
 footer #box-3 i:hover,
 footer #box-2 a:hover {
     color: #3C0085;
+    transition: all 0.5s ease-out;
 }
 
 footer #box-1 p {
