Media Query for 768px , 992px, & 1200px

--- a/css/index.css
+++ b/css/index.css
@@ -397,3 +397,38 @@ footer input::placeholder {
     color: blueviolet;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {...}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    section#addToSlack .container .slogan-image {
+        margin-left: -7.0rem;
+    }
+    section#info .box-1, section#info .box-2 {
+        margin-top: 70%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    section#addToSlack .container .slogan-image {
+        margin-left: 10rem;
+    }
+    section#info .box-1, section#info .box-2 {
+        margin-top: 50%;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    section#addToSlack .container .slogan-image {
+        margin-left: 22rem;
+    }
+    section#info .box-1, section#info .box-2 {
+        margin-top: 40%;
+    }
+}
