--- a/css/index.css
+++ b/css/index.css
@@ -398,7 +398,11 @@ footer input::placeholder {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
+    .slogan {
+        font-size: .40rem;
+    }
+}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {}
