target css for job images

--- a/css/index.css
+++ b/css/index.css
@@ -402,6 +402,9 @@ footer input::placeholder {
     .slogan {
         font-size: .42rem;
     }
+    .job-images {
+      
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
