--- a/css/index.css
+++ b/css/index.css
@@ -183,9 +183,9 @@ section#addToSlack .container button {
 /* Section Jobs */
 section#jobs .container {
     background-color:#F0F2F4 ;
-    /* height:365px ; */
-    height: auto;
-    width: 100%;
+    height:365px ;
+    /* height: auto;*/ 
+    width: 100%; 
 }
 
 section#jobs #job-images {
@@ -400,6 +400,7 @@ footer input::placeholder {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+
     /* .slogan {
         font-size: .42rem;
     }
