uncomment out section#jobs #job-images  css

--- a/css/index.css
+++ b/css/index.css
@@ -188,12 +188,12 @@ section#jobs .container {
     width: 100%; 
 }
 
-/* section#jobs #job-images {
+section#jobs #job-images {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
-} */
+}
 
 /* Pairing & Onboarding Section */ 
 section#info .box-1, section#info .box-2 {
